--- a/wp-content/themes/html5blank-stable/style.scss
+++ b/wp-content/themes/html5blank-stable/style.scss
@@ -1125,6 +1125,153 @@ button, input[type=submit]{
 	}
 }
 
+.sessao-tecnicas-interna{
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	width: 100%;
+	.sessao-tecnicas-menu-interna{
+			display: block;
+			min-width: vw(322);
+			max-width: vw(322);
+			width: 100%;
+			padding-right: vw(62);
+			cursor: pointer;
+			.sessao-tecnicas-menu-item{
+				display: flex;
+				align-items: center;
+				justify-content: flex-start;
+				flex-direction: column;
+				min-height: vw(140);
+				height: 100%;
+				padding: vw(15) vw(20);
+				background-color: transparent;
+				box-sizing: border-box;
+				margin-bottom: vw(30);
+				position: relative;
+				transition: all 0.5s ease;
+				img{
+					width: max-content;
+					height: vw(65);
+					margin-bottom: vw(10);
+					margin-right: auto;
+				}
+				span{
+					display: block;
+					width: 100%;
+					color: #2D3643;
+					transition: all 0.5s ease;
+				}
+				&.sessao-ativa{
+					visibility: visible;
+					opacity: 1;
+					background-color: #638796;
+					box-shadow: 0px 1px 20px 0px rgba(0,0,0,0.5);
+					span{
+						color: #FFFFFF;
+					}
+				}
+				&::after{
+					content: "";
+					position: absolute;
+					left: 0;
+					bottom: vw(-29);
+					display: block;
+					width: 100%;
+					height: 1px;
+					background-color: #707070;
+				}
+				&:first-child{
+					&::after{
+						width: calc(100% - vw(40));
+					}
+					
+				}
+				&:last-child{
+					&::after{
+						display: none;
+					}
+					
+				}
+			}
+	}
+	.sessao-tecnicas-menu-conteudo{
+		position: relative;
+		.sessao-tecnicas-absolute{
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			.sessao-tecnicas-item{
+				display: flex;
+				align-items: center;
+				justify-content: flex-start;
+				visibility: hidden;
+				opacity: 0;
+				height: 0;
+				transition: all 0.5s ease;
+				.sessao-tecnicas-item-imagem{
+					display: block;
+					width: vw(444);
+					margin-right: vw(66);
+					img{
+						width: 100%;
+						height: vw(576);
+						object-fit: cover;
+						object-position: center;
+					}
+				}
+				.sessao-tecnicas-item-texto{
+					display: block;
+					width: vw(398);
+					height: auto;
+						h4{
+							display: block;
+							width: 100%;
+							font-size: vw(20);
+							color: #2D3643;
+							margin-bottom: 15px;
+							text-align: left;
+							font-weight: bold;
+						}
+						p{
+							font-size: vw(20);
+							line-height: em(20, 26);
+							color: #2D3643;
+							margin-bottom: vw(21);
+							text-align: left;
+							font-weight: 400;
+						}
+					a{
+						display: block;
+						width: max-content;
+						max-width: 100%;
+						font-size: vw(24);
+						font-weight: bold;
+						background-color: #638796;
+						border-radius: 50px 50px 50px 50px;
+						box-shadow: 0px 3px 6px 0px rgba(0, 56.00000000000001, 58, 0.3607843137254902);
+						padding: vw(22) vw(40);
+						background-image: linear-gradient(259deg, #638796 50%, #32444B 85%);
+						color: #fff;
+						transition: all 0.5s ease;
+						flex: 1 1 auto;
+						background-size: 200% auto;
+						&:hover{
+							background-position: 50% center;
+						}
+					}
+				}
+				&.sessao-ativa{
+					visibility: visible;
+					opacity: 1;
+					height: auto;
+				}
+			}
+		}
+
+	}
+}
+
 @media only screen and (max-width: 1025px) {
 
 	ul.hfe-nav-menu{
