--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -250,7 +250,7 @@ button:focus, button:active, input[type=submit]:focus, input[type=submit]:active
   transition: all 0.5s ease;
   background-image: url("https://clinicasantiagohair.com.br/new/wp-content/uploads/2022/06/Grupo-188.png");
   background-repeat: no-repeat;
-  background-position-y: 30px;
+  background-position-y: 20px;
   background-position-x: 98%;
 }
 #faq .elementor-accordion-item .elementor-tab-title.elementor-active {
@@ -371,6 +371,7 @@ button:focus, button:active, input[type=submit]:focus, input[type=submit]:active
 }
 .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa .sessao-tecnicas-menu-item-titulo span, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover .sessao-tecnicas-menu-item-titulo span {
   font-weight: bold;
+  color: #2D3643;
 }
 .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item.sessao-ativa .sessao-tecnicas-menu-item-seta, .sessao-tecnicas .sessao-tecnicas-menu .sessao-tecnicas-menu-item:hover .sessao-tecnicas-menu-item-seta {
   right: 0.5208333333vw;
@@ -406,7 +407,7 @@ button:focus, button:active, input[type=submit]:focus, input[type=submit]:active
   width: 100%;
   font-size: 2.0833333333vw;
   line-height: 1.225em;
-  color: #707070;
+  color: #2D3643;
   margin-bottom: 16px;
   text-align: left;
   font-weight: bold;
@@ -414,7 +415,7 @@ button:focus, button:active, input[type=submit]:focus, input[type=submit]:active
 .sessao-tecnicas .sessao-tecnicas-item .sessao-tecnicas-item-conteudo .sessao-tecnicas-item-texto p {
   font-size: 1.0416666667vw;
   line-height: 1.3em;
-  color: #707070;
+  color: #2D3643;
   margin-bottom: 1.25vw;
   text-align: left;
   font-weight: 400;
@@ -430,7 +431,7 @@ button:focus, button:active, input[type=submit]:focus, input[type=submit]:active
   background-color: #638796;
   border-radius: 50px 50px 50px 50px;
   box-shadow: 0px 3px 6px 0px rgba(0, 56, 58, 0.3607843137);
-  padding: 1.5104166667vw 2.0833333333vw;
+  padding: 1.1458333333vw 2.3958333333vw;
   background-image: linear-gradient(259deg, #638796 50%, #32444B 85%);
   color: #fff;
   transition: all 0.5s ease;
@@ -1052,7 +1053,7 @@ button:focus, button:active, input[type=submit]:focus, input[type=submit]:active
 }
 .check-list ul li::before {
   display: flex;
-  content: url(http://localhost/santiago/wp-content/uploads/2022/07/Icon-awesome-check-circle.svg);
+  content: url(https://clinicasantiagohair.com.br/new/wp-content/uploads/2022/07/Icon-awesome-check-circle.svg);
   position: absolute;
   left: 0;
   top: 0.2604166667vw;
