--- a/wp-content/themes/html5blank-stable/style.scss
+++ b/wp-content/themes/html5blank-stable/style.scss
@@ -270,7 +270,7 @@ button, input[type=submit]{
 			transition: all 0.5s ease;
 			background-image: url("https://clinicasantiagohair.com.br/new/wp-content/uploads/2022/06/Grupo-188.png");
 			background-repeat: no-repeat;
-			background-position-y: 30px;
+			background-position-y: 20px;
 			background-position-x: 98%;
 			&.elementor-active{
 				padding-bottom: 16px;
@@ -390,6 +390,7 @@ button, input[type=submit]{
 				.sessao-tecnicas-menu-item-titulo{
 					span{
 						font-weight: bold;
+						color: #2D3643;
 					}
 				}
 				.sessao-tecnicas-menu-item-seta{
@@ -428,7 +429,7 @@ button, input[type=submit]{
 					width: 100%;
 					font-size: vw(40);
 					line-height: em(40, 49);
-					color: #707070;
+					color: #2D3643;
 					margin-bottom: 16px;
 					text-align: left;
 					font-weight: bold;
@@ -438,7 +439,7 @@ button, input[type=submit]{
 				p{
 					font-size: vw(20);
 					line-height: em(20, 26);
-					color: #707070;
+					color: #2D3643;
 					margin-bottom: vw(24);
 					text-align: left;
 					font-weight: 400;
@@ -453,7 +454,7 @@ button, input[type=submit]{
 				background-color: #638796;
 				border-radius: 50px 50px 50px 50px;
 				box-shadow: 0px 3px 6px 0px rgba(0, 56.00000000000001, 58, 0.3607843137254902);
-				padding: vw(29) vw(40);
+				padding: vw(22) vw(46);
 				background-image: linear-gradient(259deg, #638796 50%, #32444B 85%);
 				color: #fff;
 				transition: all 0.5s ease;
@@ -1112,7 +1113,7 @@ button, input[type=submit]{
 			position: relative;
 			&::before{
 				display: flex;
-				content: url(http://localhost/santiago/wp-content/uploads/2022/07/Icon-awesome-check-circle.svg);
+				content: url(https://clinicasantiagohair.com.br/new/wp-content/uploads/2022/07/Icon-awesome-check-circle.svg);
 				position: absolute;
 				left: 0;
 				top: vw(5);
